--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}0
 
     steps:
       - name: Check out code
@@ -36,7 +38,13 @@ jobs:
           
       - name: Build and push Docker image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-428818/notely-ar-repo/notely:latest
+     
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
       
+      - name: Run migrations
+        run: ./scripts/migrateup.sh
+
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-428818/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-428818 --max-instances=4
 
